# docker-app

./: Cargo.toml  Dockerfile  docker-compose.yml  k8s-deployment.yaml  k8s-hpa.yaml  k8s-service.yaml
benches/: bench.rs
src/: lib.rs  main.rs
