[package]
name = "docker_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.14.0"
serde = "1.0.144"
serde_derive = "1.0.144"
md-5 = "0.10.5"
tokio = { version = "1.21.0", features = ["full"] }
postcard = "1.0.2"
bincode = "1.3.3"
futures = "0.3.25"

[dev-dependencies]
criterion = { version = "0.4", features = ["async_tokio", "html_reports"] }
tokio = { version = "1.21.0", features = ["full"] }

[[bench]]
name = "bench"
harness = false
